# papereading-master

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml  test.yml
examples/: quickstart.py
packaging/: PapereadingMaster.iss  PapereadingMaster.spec  bootstrap_windows.ps1  build_windows.ps1  create_icon.py  desktop_entry.py  version_info.txt
src/finals_agent/: __init__.py  __main__.py
src/finals_agent/agent/: __init__.py  citation_guard.py  context.py  factory.py  llm.py  orchestrator.py  planning.py  preretrieval.py  prompts.py  query_rewrite.py  runner.py  tool_registry.py  tools.py
src/finals_agent/app/: background_tasks.py  cli.py  desktop.py  ui_shell.py  web.py
src/finals_agent/core/: config.py  events.py  exceptions.py  observability.py  runtime.py  (+2 more)
tests/: test_artifact_interpretation.py  test_artifact_locator.py  test_artifact_manifest.py  test_background_tasks.py  test_citations.py  test_config.py  test_context.py  test_embeddings.py  test_evals.py  test_external_search.py  test_ingestion.py  test_memory.py  test_memory_retrieval.py  test_observability.py  test_orchestrator.py  test_paper_download.py  test_planning.py  test_preretrieval.py  test_processors.py  test_prompts.py  test_query_rewrite.py  test_reading_intelligence.py  test_reading_state.py  test_repository.py  test_research_assistant.py  test_retrievers.py  test_runner.py  test_runs.py  test_selection.py  test_storage.py  test_tool_registry.py  test_tools.py  test_vision.py  test_web_ui.py  test_workflows.py
(+28 files in other folders)
