[project]
name = "paper-agent"
version = "0.2.0b1"
description = "A local-first agentic workspace for reading papers, inspecting code, and planning research experiments."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.0",
    "langchain-openai>=1.0",
    "pypdf>=5.0",
    "pymupdf>=1.24",
    "python-dotenv>=1.0",
    "jieba>=0.42.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
desktop = [
    "pillow>=10,<13",
    "pyinstaller>=6.19,<7",
    "pywebview>=6.2,<7",
]
embeddings = [
    "sentence-transformers>=3.0",
]
vision = []

[project.scripts]
finals-agent = "finals_agent.app.cli:main"
paper-agent = "finals_agent.app.cli:main"
paper-agent-desktop = "finals_agent.app.desktop:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
